--- a/res/drawable/button_round_blue_light.xml
+++ b/res/drawable/button_round_blue_light.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ The MIT License (MIT)
   ~
@@ -23,12 +24,15 @@
   ~ SOFTWARE.
   -->
 
-<resources>
-    <attr name="page_background" format="color"/>
-    <attr name="icon_post_delete" format="reference"/>
-    <attr name="icon_post_picture" format="reference"/>
-    <attr name="icon_post_row" format="reference"/>
-    <attr name="button_blue_background" format="color"/>
-    <attr name="button_blue_foreground" format="color"/>
-    <attr name="button_round_blue" format="reference"/>
-</resources>
+<shape
+    android:shape="rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke android:color="@color/white"/>
+    <solid android:color="@color/metro_blue"/>
+    <corners android:radius="5.0dip"/>
+    <padding
+        android:top="1dp"
+        android:bottom="1dp"
+        android:left="1dp"
+        android:right="1dp"/>
+</shape>
