--- a/res/drawable/button_selector_transparent.xml
+++ b/res/drawable/button_selector_transparent.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ The MIT License (MIT)
   ~
@@ -23,12 +24,13 @@
   ~ SOFTWARE.
   -->
 
-<resources>
-    <attr name="page_background" format="color"/>
-    <attr name="icon_post_delete" format="reference"/>
-    <attr name="icon_post_picture" format="reference"/>
-    <attr name="icon_post_row" format="reference"/>
-    <attr name="button_blue_background" format="color"/>
-    <attr name="button_blue_foreground" format="color"/>
-    <attr name="button_round_blue" format="reference"/>
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:state_pressed="true">
+        <color android:color="@color/metro_blue"/>
+    </item>
+    <item android:state_pressed="false">
+        <color android:color="@color/transparent"/>
+    </item>
+
+</selector>
