--- a/res/drawable/button_round_blue.xml
+++ b/res/drawable/button_round_blue.xml
@@ -28,8 +28,7 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:color="@color/white"
+        android:color="@android:color/holo_blue_dark"
         android:width="1dp"/>
-    <solid android:color="@color/black"/>
-    <corners android:radius="5dp"/>
+    <solid android:color="@color/gray_dark_dark"/>
 </shape>
