--- a/res/drawable/button_selector_transparent.xml
+++ b/res/drawable/button_selector_transparent.xml
@@ -26,11 +26,16 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true">
+    <item android:state_enabled="false">
+        <color android:color="@color/gray_dark"/>
+    </item>
+    <item android:state_enabled="true" android:state_pressed="true">
         <color android:color="@color/metro_blue"/>
     </item>
-    <item android:state_pressed="false">
+    <item android:state_enabled="true" android:state_pressed="false">
         <color android:color="@color/transparent"/>
     </item>
-
+    <item android:state_enabled="true">
+        <color android:color="@color/transparent"/>
+    </item>
 </selector>
