--- a/res/values/commands.xml
+++ b/res/values/commands.xml
@@ -25,6 +25,10 @@
 
 <resources>
     <item name="key_command_status_reply" type="id"/>
+    <item name="key_command_status_favorite" type="id"/>
+    <item name="key_command_status_retweet" type="id"/>
+    <item name="key_command_status_reply_to_all" type="id"/>
+    <item name="key_command_status_fav_and_rt" type="id"/>
     <item name="key_command_user_reply" type="id"/>
     <item name="key_command_message_reply" type="id"/>
     <item name="key_command_event_reply" type="id"/>
