--- a/res/values/commands.xml
+++ b/res/values/commands.xml
@@ -34,4 +34,5 @@
     <item name="key_command_event_reply" type="id"/>
     <item name="key_command_status_quote" type="id"/>
     <item name="key_command_status_clipboard" type="id"/>
+    <item name="key_command_status_share" type="id"/>
 </resources>
