--- a/res/values/commands.xml
+++ b/res/values/commands.xml
@@ -35,4 +35,5 @@
     <item name="key_command_status_quote" type="id"/>
     <item name="key_command_status_clipboard" type="id"/>
     <item name="key_command_status_share" type="id"/>
+    <item name="key_command_status_open_in_browser" type="id"/>
 </resources>
