--- a/res/values/commands.xml
+++ b/res/values/commands.xml
@@ -39,4 +39,5 @@
     <item name="key_command_status_nanigaja" type="id"/>
     <item name="key_command_status_make_anonymous" type="id"/>
     <item name="key_command_status_tofubuster" type="id"/>
+    <item name="key_command_status_delete" type="id"/>
 </resources>
