--- a/res/values/commands.xml
+++ b/res/values/commands.xml
@@ -41,4 +41,5 @@
     <item name="key_command_status_tofubuster" type="id"/>
     <item name="key_command_status_delete" type="id"/>
     <item name="key_command_user_add_to_reply" type="id"/>
+    <item name="key_command_user_favstar" type="id"/>
 </resources>
