--- a/res/values/commands.xml
+++ b/res/values/commands.xml
@@ -46,4 +46,6 @@
     <item name="key_command_user_open_twilog" type="id"/>
     <item name="key_command_user_follow" type="id"/>
     <item name="key_command_user_unfollow" type="id"/>
+    <item name="key_command_user_block" type="id"/>
+    <item name="key_command_user_unblock" type="id"/>
 </resources>
