Add UserCommandSendMessage and MessageCommandDelete

--- a/res/values/commands.xml
+++ b/res/values/commands.xml
@@ -50,4 +50,6 @@
     <item name="key_command_user_unblock" type="id"/>
     <item name="key_command_user_r4s" type="id"/>
     <item name="key_command_user_introduce" type="id"/>
+    <item name="key_command_message_delete" type="id"/>
+    <item name="key_command_user_send_message" type="id"/>
 </resources>
