--- a/res/layout/menu_item_simple_text.xml
+++ b/res/layout/menu_item_simple_text.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ The MIT License (MIT)
   ~
@@ -23,18 +24,18 @@
   ~ SOFTWARE.
   -->
 
-<resources>
-    <item name="actionbar_add_page" type="id"/>
-    <item name="actionbar_settings" type="id"/>
-    <item name="actionbar_setting" type="id"/>
-    <item name="actionbar_edit_templates" type="id"/>
-    <item name="actionbar_edit_extraction" type="id"/>
-    <item name="actionbar_edit_commands" type="id"/>
-    <item name="actionbar_services" type="id"/>
-    <item name="actionbar_report" type="id"/>
-    <item name="actionbar_favstar" type="id"/>
-    <item name="actionbar_aclog" type="id"/>
-    <item name="actionbar_twilog" type="id"/>
-    <item name="fragment_setting" type="id"/>
-    <item name="menu_edit_list_add" type="id"/>
-</resources>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:orientation="vertical"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="?android:attr/activatedBackgroundIndicator">
+
+    <TextView
+        android:id="@+id/textView_menuItem_simple"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:paddingLeft="10dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"/>
+</FrameLayout>
