--- a/res/menu/edit_list.xml
+++ b/res/menu/edit_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ The MIT License (MIT)
   ~
@@ -23,18 +24,9 @@
   ~ SOFTWARE.
   -->
 
-<resources>
-    <item name="actionbar_add_page" type="id"/>
-    <item name="actionbar_settings" type="id"/>
-    <item name="actionbar_setting" type="id"/>
-    <item name="actionbar_edit_templates" type="id"/>
-    <item name="actionbar_edit_extraction" type="id"/>
-    <item name="actionbar_edit_commands" type="id"/>
-    <item name="actionbar_services" type="id"/>
-    <item name="actionbar_report" type="id"/>
-    <item name="actionbar_favstar" type="id"/>
-    <item name="actionbar_aclog" type="id"/>
-    <item name="actionbar_twilog" type="id"/>
-    <item name="fragment_setting" type="id"/>
-    <item name="menu_edit_list_add" type="id"/>
-</resources>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/menu_edit_list_delete"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:showAsAction="always"/>
+</menu>
