--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -31,6 +31,9 @@
     <attr name="button_blue_background" format="color"/>
     <attr name="button_blue_foreground" format="color"/>
     <attr name="button_round_blue" format="reference"/>
+    <attr name="button_red_background" format="color"/>
+    <attr name="button_red_foreground" format="color"/>
+    <attr name="button_round_red" format="reference"/>
     <attr name="custom_button_transparent" format="reference"/>
     <attr name="icon_status_favorite_on" format="reference"/>
     <attr name="color_status_text_header" format="color"/>
