--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -33,6 +33,9 @@
         <item name="button_blue_background">@color/black</item>
         <item name="button_blue_foreground">@color/white</item>
         <item name="button_round_blue">@drawable/button_round_blue</item>
+        <item name="button_red_background">@color/black</item>
+        <item name="button_red_foreground">@color/white</item>
+        <item name="button_round_red">@drawable/button_round_red</item>
         <item name="custom_button_transparent">@style/custom_button_transparent</item>
         <item name="icon_status_favorite_on">@drawable/icon_favorite_on</item>
         <item name="color_status_text_header">@color/dark_green</item>
@@ -55,6 +58,9 @@
         <item name="button_blue_background">@color/metro_blue</item>
         <item name="button_blue_foreground">@color/white</item>
         <item name="button_round_blue">@drawable/button_round_blue_light</item>
+        <item name="button_red_background">@color/red</item>
+        <item name="button_red_foreground">@color/white</item>
+        <item name="button_round_red">@drawable/button_round_red_light</item>
         <item name="custom_button_transparent">@style/custom_button_transparent</item>
         <item name="icon_status_favorite_on">@drawable/icon_favorite_on</item>
         <item name="color_status_text_header">@color/dark_green</item>
