--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -46,4 +46,8 @@
     <attr name="color_list_divider" format="color"/>
     <attr name="color_message_text_header" format="color"/>
     <attr name="color_message_bg_normal" format="color"/>
+    <attr name="icon_message" format="reference"/>
+    <attr name="icon_retweet_off" format="reference"/>
+    <attr name="icon_favorite_off" format="reference"/>
+    <attr name="icon_garbage" format="reference"/>
 </resources>
