--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -48,6 +48,10 @@
         <item name="color_list_divider">@color/gray_dark_light</item>
         <item name="color_message_text_header">@color/orange</item>
         <item name="color_message_bg_normal">@color/orange_dark</item>
+        <item name="icon_message">@drawable/icon_message_white</item>
+        <item name="icon_retweet_off">@drawable/icon_retweet_white</item>
+        <item name="icon_favorite_off">@drawable/icon_favorite_off_white</item>
+        <item name="icon_garbage">@drawable/icon_garbage_white</item>
     </style>
 
     <style name="theme_light" parent="@android:style/Theme.Holo.Light.DarkActionBar">
@@ -73,6 +77,10 @@
         <item name="color_list_divider">@color/gray_light_light</item>
         <item name="color_message_text_header">@color/orange</item>
         <item name="color_message_bg_normal">@color/orange_light</item>
+        <item name="icon_message">@drawable/icon_message</item>
+        <item name="icon_retweet_off">@drawable/icon_retweet_off</item>
+        <item name="icon_favorite_off">@drawable/icon_favorite_off</item>
+        <item name="icon_garbage">@drawable/icon_garbage</item>
     </style>
 
     <style name="custom_button_transparent">
