Change command name and role

--- a/res/values/commands.xml
+++ b/res/values/commands.xml
@@ -52,4 +52,5 @@
     <item name="key_command_message_reply" type="id"/>
     <item name="key_command_message_delete" type="id"/>
     <item name="key_command_status_add_to_reply" type="id"/>
+    <item name="key_command_status_open_chain" type="id"/>
 </resources>
