Implement status menu header view

--- a/res/layout/dialog_status_detail.xml
+++ b/res/layout/dialog_status_detail.xml
@@ -32,6 +32,7 @@
     android:orientation="vertical">
 
     <include
+        android:id="@+id/layout_status_header"
         layout="@layout/list_item_status"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
